# experimental_robotics_assignment_1

./: readme.md
cv_marker/: CMakeLists.txt  package.xml
cv_marker/src/: marker_circler.cpp  test_empty_message.cpp
marker_localizer/: CMakeLists.txt  aruco_detection_test.cpp  package.xml
marker_localizer/src/: Marker_sorter.cpp
py_cv_marker/: package.xml  setup.cfg  setup.py
py_cv_marker/py_cv_marker/: marker_circler.py
robot_control/: CMakeLists.txt  camera_controller.cpp  camera_publisher.cpp  package.xml  robot_control.cpp
robot_control/launch/: gazebo_assignment.launch.py
robot_control/urdf/: m2wr_arm2.xacro  robot4.xacro
